bk_ida/gccida/c3/split_2
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50578:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50587:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50600:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50609:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50614:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50621:30: error: use of undeclared identifier 'recog_data_0'
v154 = *( unsigned __int16 *)recog_data_0.operand[0]; 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50626:10: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtuint = recog_data_0.operand[0]->fld[0].rtuint; 
         ^~~~~~~~~~~~
         recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50633:32: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( v154 != 61 || v12 || recog_data_0.operand[0]->fld[0].rtint > 3u ) 
                               ^~~~~~~~~~~~
                               recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50637:32: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !reg_overlap_mentioned_p( recog_data_0.operand[0], ( rtx)v7) ) 
                               ^~~~~~~~~~~~
                               recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50638:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_882( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50646:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50654:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v162 = true_regnum( recog_data_0.operand[0]); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50655:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( v162 != true_regnum( recog_data_0.operand[1]) ) 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50657:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_883( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50661:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50671:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50685:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_879( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50689:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/insn-recog.c:50702:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_885( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/split_2/src/obj/insn-recog.o] Error 1
